--- a/personal-budget/src/app/homepage/homepage.component.html
+++ b/personal-budget/src/app/homepage/homepage.component.html
@@ -1,4 +1,5 @@
 <main class="center" id="main">
+    <pb-breadcrumbs></pb-breadcrumbs>
 
     <div class="page-area">
 
@@ -65,6 +66,10 @@
                 <canvas id="myChart" width="400" height="400"></canvas>
             </p>
         </article>
+
+        <p>
+            <figure id="bar">Figure</figure>
+        </p>
 
     </div>
 
