--- a/personal-budget/src/app/footer/footer.component.html
+++ b/personal-budget/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="bottom">
     <div class="center">
-        All rights reserved &copy; Fabio Nolasco
+        Changed by Danish Uddin Mohammed
     </div>
 </footer>
